--- a/app.json
+++ b/app.json
@@ -6,36 +6,16 @@
   "keywords": ["bullhorn", "career-portal", "jobs", "angular", "express"],
   "env": {
     "BULLHORN_SWIMLANE": {
-      "description": "What is your company's Bullhorn Swimlane?",
+      "description": "43",
       "required": "true"
     },
     "BULLHORN_CORP_TOKEN": {
-      "description": "What is your company's Corp Token?",
-      "required": "true"
-    },
-    "HOSTED_ENDPOINT": {
-      "description": "Where is this site hosted?",
-      "required": "true"
-    },
-    "COMPANY_NAME": {
-      "description": "What is your company name?",
-      "required": "true"
-    },
-    "COMPANY_WEBSITE": {
-      "description": "What is your company website?",
+      "description": "A5L6S0",
       "required": "true"
     },
     "COMPANY_LOGO_URL": {
-      "description": "Url for you companies logo?",
+      "description": "https://edisonandblack.com/assets/img/brandimages/eblogo2020black.png",
       "required": "true"
     },
-    "GOOGLE_VERIFICATION_CODE": {
-      "description": "HTML tag Verification Code from https://www.google.com/webmasters/verification/verification",
-      "required": "true"
-    },
-    "GOOGLE_ANALYTICS_TRACKING_ID": {
-      "description": "Google Analytics Tracking ID",
-      "required": "false"
-    }
   }
 }
